Added id to Pokedex h1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>Simple JS App</title>
     </head>
     <body>
-        <h1>Pokedex</h1>
+        <h1 id="pokedex-title">Pokedex</h1>
         <ul class="pokemon-list"></ul>
         <script src="js/promise-polyfill.js"></script>
         <script src="js/fetch-polyfill.js"></script>
