--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <body>
         <h1 id="pokedex-title">Pokedex</h1>
         <ul class="pokemon-list"></ul>
-        <script src="js/promise-polyfill.js"></script>
-        <script src="js/fetch-polyfill.js"></script>
-        <script src="js/scripts.js"></script>
+        <div id="modal-container">
+            <script src="js/promise-polyfill.js"></script>
+            <script src="js/fetch-polyfill.js"></script>
+            <script src="js/scripts.js"></script>
+        </div>
     </body>
 </html>
